--- a/index3.html
+++ b/index3.html
@@ -29,7 +29,7 @@
                         <ul class="header_menu-list">
                             <li><a class="header_menu-link" href="index.html">Главная</a></li>
                             <li><a class="header_menu-link menu-link--active" href="index3.html">Экскурсии</a></li>
-                            <li><a class="header_menu-link" href="#">Личный кабинет</a></li>
+                            <li><a class="header_menu-link" href="index3.html">Личный кабинет</a></li>
                         </ul>
                     </div>
                 </div>
